[startpage] Fix alignment between header and body on mobile.

--- a/apps/startpage/static/startpage.css
+++ b/apps/startpage/static/startpage.css
@@ -2,10 +2,6 @@ BODY {
     background-color: var(--white);
 }
 
-#display {
-    padding: 0 0.5em;
-}
-
 #editor {
     display: flex;
 }
